[gd_scene load_steps=4 format=3 uid="uid://ds31qgkich110"]

[ext_resource type="Script" uid="uid://b5nxgahwv4q85" path="res://scripts/main_menu.gd" id="1_glbon"]
[ext_resource type="Texture2D" uid="uid://d17t3gpbwke6a" path="res://assets/ui/home.png" id="2_nlkkf"]
[ext_resource type="Theme" uid="uid://b86jtkri00qdh" path="res://scripts/ui_button_main.theme" id="3_bqqt6"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_glbon")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_nlkkf")
centered = false

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 360.0
offset_top = 160.0
offset_right = 360.0
offset_bottom = 160.0
theme = ExtResource("3_bqqt6")

[node name="PlayButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 36.0
text = "PLAY"
icon_alignment = 1

[node name="SettingsButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_top = 44.0
offset_right = 200.0
offset_bottom = 80.0
text = "SETTINGS"
icon_alignment = 1

[node name="ExitButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_top = 88.0
offset_right = 200.0
offset_bottom = 124.0
text = "EXIT"
icon_alignment = 1

[connection signal="pressed" from="Buttons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Buttons/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Buttons/ExitButton" to="." method="_on_exit_button_pressed"]
